--- a/scss/site/_pre.scss
+++ b/scss/site/_pre.scss
@@ -2,5 +2,6 @@ pre {
 	word-wrap: break-word;
 	margin-bottom: 1.25rem;
 	padding: .5rem;
-	background-color: hsla(0, 0%, 0%, .2);
+	background-color: hsla(0, 0%, 0%, .1);
+	border: 1px solid #ddd;
 }
