Fix Post a Comment background and border.

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -10,4 +10,4 @@
 /* Site structure */
 "site/structure", // Your site structure
 "site/pre", // Code displaying on the page.
-"site/social" // Social links, comments and the like.
+"site/social"; // Social links, comments and the like.
